<resources>
    <string name="app_name">Lawnmower</string>
    <string name="versionNumber">Version 0.7</string>
    <string name="whs_adresse">https://www.w-hs.de/</string>

    <string name ="roblab_adresse">https://roblab2.ik.w-hs.de/mediawiki/index.php/Lawnmower></string>
    <string name="title_activity_maps">Map</string>
    <string name="welcome">Willkommen</string>
    <string name="MowActivityTitle">Mein Rasenmäher</string>

    <string name="default_server_ip">192.168.0.8</string>
    <string name="default_server_port">6750</string>
    <string name="default_image_port">6755</string>
    <string name="defaultIPHint">Default IP-Address 192.168.0.8</string>
    <string name="defaultPortHint">Default Port Setting: 6750</string>
    <string name="defaultImagePortHint">Default Image Port Setting: 6755</string>

    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>
    <string name="connect_button">Connect To Server</string>
    <string name="API_KEY">AIzaSyB4igh24I4mYtyLTCdn-QEWMfm-sBQODws</string>
    <string name="msgRecieved">I received a message.</string>
    <string name="version"> Version 0.9</string>
    <string name="aktualisiere_wetterdaten">Aktuallisiere Wetterdaten</string>
    <string name="Start">Starte Mähvorgang</string>
    <string name="Pause">Pausiere Mähvorgang</string>
    <string name="Stop">Stoppe Mähvorgang</string>
    <string name="GoHome">Fahre zur Ladestadion</string>
    <string name="NoConnection">Verbindung nicht möglich. \nBitte überprüfe deine Einstellung</string>
    <string name="Ready">Lawnmower bereit</string>
    <string name="Mowing">Mähvorgang</string>
    <string name="MowingPause">Mähvorgang pausiert</string>
    <string name="Manual">Starte manuelle Bedienung</string>
    <string name="LowBattery">Geringer Batteriestatus</string>
    <string name="startTracking">Starte Tracking</string>
    <string name="stopTracking">Beende Tracking</string>
    <string name="setHome">Setze Homepoint</string>
    <string name="MowingProcess">Mähvorgang</string>
</resources>