<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:layout_margin = "16dp"
    tools:context = ".Einstellungen">

    <EditText
        android:id="@+id/Button_Ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:autofillHints="IP"
        android:hint="@string/defaultIPHint"
        android:inputType="number"
        android:text="@string/default_server_ip" />

    <EditText
        android:id="@+id/Button_Port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button_Ip"
        android:hint="@string/defaultPortHint"
        android:inputType="number"
        android:text="@string/default_server_port"
        android:autofillHints="port"/>

    <Button
        android:id="@+id/Button_Connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button_Port"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/connect_button" />


</RelativeLayout>