<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:layout_margin = "16dp"
    tools:context = ".activities.SettingsActivity">

    <EditText
        android:id="@+id/Button_Ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:autofillHints="IP"
        android:hint="@string/defaultIPHint"
        android:inputType="text"
        android:text="@string/default_server_ip" />

    <EditText
        android:id="@+id/Button_Port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button_Ip"
        android:hint="@string/defaultPortHint"
        android:inputType="number"
        android:text="@string/default_server_port"
        android:autofillHints="port"/>

    <Button
        android:id="@+id/Button_Connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button_Port"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="Verbinden zum Server" />

    <Button
        android:id="@+id/Button_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button_Port"
        android:layout_toEndOf="@id/Button_Connect"
        android:layout_gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:text="Verbindung trennen" />

    <ImageButton
        android:id="@+id/lawnmowerShutdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Button_Connect"
        android:layout_marginTop="50dp"
        android:background="#00FFFFFF"
        app:srcCompat="@drawable/shutdownbutton" />

    <ImageButton
        android:id="@+id/lawnmowerReboot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Button_Connect"
        android:layout_alignStart="@id/Button_disconnect"
        android:layout_marginTop="50dp"
        android:background="#00FFFFFF"
        app:srcCompat="@drawable/restartbutton" />


</RelativeLayout>