<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.lawnmower.gstreamer.GStreamerSurfaceView
        android:id="@+id/gStreamer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--<SurfaceView
        android:id="@+id/gStream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />-->

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="TextView"
        android:layout_alignLeft="@id/JoystickView"/>

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/JoystickView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:background="@drawable/joystickbackground"
        custom:JV_buttonImage="@drawable/joystickstick" />

    <ToggleButton
        android:id="@+id/tracking"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/JoystickView"
        android:layout_above="@id/JoystickView"
        android:textOff="@string/startTracking"
        android:textOn="@string/stopTracking"
        android:layout_marginLeft="10dp"/>

    <Button
        android:id="@+id/setHome"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/setHome"
        android:layout_above="@id/tracking"
        android:layout_alignLeft="@id/tracking"/>

    <ImageView
        android:id="@+id/batteryStatusIconCntrl"
        android:layout_width="45dp"
        android:layout_height="25dp"
        custom:srcCompat="@drawable/battery0"
        android:layout_alignRight="@id/setHome"/>

    <TextView
        android:id="@+id/batteryStatusCntrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1%"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:layout_below="@id/batteryStatusIconCntrl"
        android:layout_alignEnd="@id/batteryStatusIconCntrl"
        android:layout_marginEnd="12dp"/>

</RelativeLayout>